docs: add 25.104.0-M1 and M2 changelog entries